--- a/assets/app.css
+++ b/assets/app.css
@@ -408,52 +408,51 @@ footer {
   border-radius: 30px;
   border: solid 3px #404040;
   box-sizing: border-box;
+  transition: all 0.2s 0s ease;
 }
 .dark .switch label,
 .dark .switch input:checked + label {
   border: solid 3px #e0e0e0;
 }
-.switch input:checked + label {
-  background-color: #404040;
-}
-.dark .switch input:checked + label {
-  background-color: #e0e0e0;
-}
 .switch label:before,
-.switch label:after,
-.switch input:checked + label:before,
-.switch input:checked + label:after {
+.switch label:after {
+  content: "";
+  display: block;
   position: absolute;
   top: -3px;
-  content: "";
-  display: block; width: 50%;
-  height: 24px;
-  border-radius: 24px;
 }
 .switch label:before {
   left: -3px;
-  border: solid 3px #404040;
-  background-color: #ffffff;
+  background-color: #404040;
+  height: 30px;
+  width: 40px;
+  border-radius: 30px;
+  transition: all 0.2s 0s ease;
 }
 .dark .switch label:before {
-  border: solid 3px #e0e0e0;
-  background-color: #202020;
+  background-color: #e0e0e0;
 }
 .switch label:after {
-  left: 44px;
-  background-color: transparent;
+  left: -3px;
+  width: 56px;
+  background-color: #ffffff;
+  height: 30px;
+  border: solid 3px #404040;
+  border-radius: 30px;
+  box-sizing: border-box;
+  transition: all 0.2s 0s ease;
+}
+.dark .switch label:after {
+  background-color: #202020;
+  border: solid 3px #e0e0e0;
 }
 .switch input:checked + label:before {
-  border: none;
-  background-color: transparent;
+  width: 100px;
+  transition: all 0.2s 0s ease;
 }
 .switch input:checked + label:after {
-  border: solid 3px #404040;
-  background-color: #ffffff;
-}
-.dark .switch input:checked + label:after {
-  border: solid 3px #e0e0e0;
-  background-color: #202020;
+  left: 41px;
+  transition: all 0.2s 0s ease;
 }
 .button-simple {
   border-radius: 24px;
@@ -466,6 +465,7 @@ footer {
   color: #e0e0e0;
   background-color: #404040;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
+  transition: all 0.2s 0s ease;
 }
 .button-simple:hover {
   animation: hover_img 0.5s linear 0s;
@@ -496,6 +496,7 @@ footer {
   color: #ffffff;
   padding: 5px 5px 0 50px;
   margin: 5px;
+  transition: all 0.2s 0s ease;
 }
 .dark #system select {
   background-color: #e0e0e0;
@@ -910,31 +911,8 @@ button {
     color: #404040;
   }
 }
-.tab-item:active {
-  animation: tab_active 0.2s linear 0s;
-}
-@keyframes tab_active {
-  from {
-    color: #404040;
-    background-color: rgba(64,64,64,0.0);
-  }
-  to {
-    color: #e0e0e0;
-    background-color: rgba(64,64,64,1.0);
-  }
-}
-.dark .tab-item:active {
-  animation: dark_tab_active 0.2s linear 0s;
-}
-@keyframes dark_tab_active {
-  from {
-    color: #e0e0e0;
-    background-color: rgba(224,224,224,0.0);
-  }
-  to {
-    color: #404040;
-    background-color: rgba(224,224,224,1.0);
-  }
+.tab-item {
+  transition: all 0.1s 0s ease;
 }
 
 .tab-page {
