--- a/assets/app.css
+++ b/assets/app.css
@@ -606,14 +606,13 @@ button {
   background-color: rgba(255,255,255,0);
 }
 
-#menu-list {
+.header-items {
   display: flex;
   align-items: center;
   justify-content: space-between;
   align-content: space-around;
   list-style-type: none;
   margin: 0;
-  padding: 15px 10px;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
@@ -625,11 +624,16 @@ button {
   align-items: center;
   width: 40px;
 }
-#menu-main,
-#menu-system {
+.header-item:first-of-type {
+  margin: 0;
+}
+.header-item:nth-of-type(n+2) {
+  margin: 0 0 0 12px;
+}
+.header-item.icon {
   justify-content: center;
 }
-#menu-back {
+.header-item.iconlabel {
   flex: 1 1 auto;
   flex-flow: row nowrap;
   width: 40px;
@@ -647,20 +651,14 @@ button {
 .animation .header-item:hover .header-icon {
   animation: hover_img 0.5s linear 0s;
 }
-
 .header-item:active .header-icon,
 .header-item.active .header-icon {
   width: 36px;
   height: 36px;
 }
-
-#menu-back-content {
+.header-label {
   flex: 1 1 auto;
   width: 40px;
-}
-
-#menu-main {
-  margin: 0 12px;
 }
 
 .view-list #menu-back.root {
@@ -670,21 +668,23 @@ button {
   display: none;
 }
 @media (orientation: portrait) {
+  .header-items {
+    padding: 15px 5% 0;
+  }
   .view-main #menu-main {
     visibility: hidden;
-  }
-  #menu-list {
-    padding: 15px 5% 0;
   }
   .view-main #menu-back-content {
     display: none;
   }
 }
 @media (orientation: landscape) {
+  .header-items {
+    padding: 15px 10px;
+  }
   .view-main #menu-back.root {
     visibility: hidden;
   }
-
 }
 
 #control {
@@ -854,11 +854,6 @@ button {
 @keyframes hover_img {
 0% {opacity: 1.0;}
 5% {opacity: 0.8;}
-100% {opacity: 1.0;}
-}
-@keyframes active_img {
-0% {opacity: 0.5;}
-50% {opacity: 0.7;}
 100% {opacity: 1.0;}
 }
 
